--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-.container {
-    background-image: url("https://cdn.shopify.com/s/files/1/0306/6419/6141/articles/coding_languages_600x600_crop_center.png?v=1619126283");
-}
+
 img {
     width: 100px;
     height: 100px;
@@ -15,10 +13,10 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 100px;
-    background-color: aqua;
-}
+    }
 table {
     padding-right: 20px;
+    background: rgb(12, 1, 110);
     color: white;
 }
 .borderbottom {
